--- a/css/buttons.css
+++ b/css/buttons.css
@@ -1,5 +1,5 @@
 .TypeButton1 {
-    border-radius: 30;
+    border-radius: 30px;
     background-color: crimson;
     color: gold;
 }
@@ -9,4 +9,8 @@
     background-color: lime;
     border: mediumseagreen;
     border-radius: 50;
+}
+
+.TypeButton3 {
+    border-radius: 90px;
 }
